--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hola!</title>
 
     <!--Link to the stylesheet css  -->
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./assets/images/pac-man.png">
